Update image links, requirements.txt, Procfile
- Updating image links within .py files to remove issues of broken links
- requirements.txt file updated with the correct minimum needed modules (created new virtual environment to confirm locally)
- Adding Procfile for potential use with Heroku/other hosting platforms

--- a/templates/image_watermarker.html
+++ b/templates/image_watermarker.html
@@ -2,7 +2,7 @@
 {% include "header.html" %}
 
   <!-- Page Header -->
-  <header class="masthead" style="background-image: url('https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fwww.wallpapersin4k.org%2Fwp-content%2Fuploads%2F2017%2F04%2FLava-Lamp-Wallpaper-19.jpg&f=1&nofb=1&ipt=fd4758b9972d7d5302b9f5ea7b8aa54b86d4b8be30ab8c3a9c92c64e294ca2b1&ipo=images')">
+  <header class="masthead" style="background-image: url('https://raw.githubusercontent.com/musser004/Portfolio-Custom_Image_Watermark_Application/main/lavalamp-bg.jpg')">
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
