--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% include "header.html" %}
 
   <!-- Page Header -->
-  <header class="masthead" style="background-image: url('https://images.unsplash.com/photo-1679629595664-87d8ab6f56cb?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80')">
+  <header class="masthead" style="background-image: url('https://raw.githubusercontent.com/musser004/Portfolio-Custom_Image_Watermark_Application/main/index-bg.jpg')">
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
