Update text_watermarker with matplotlib
- Updating text_watermarker.py to use matplotlib fontmanager to deal with .ttf file issues when running the text watermarker
- Updating requirements.txt for matplotlib
- Updating results.html page to have modified paragraph text

--- a/templates/results.html
+++ b/templates/results.html
@@ -19,7 +19,7 @@
     <div class="row">
       <div class="col-lg-14 col-md-14 mx-auto">
 <h3>Success!</h3>
-<p>In case resulting image didn't automatically open, here it is again below. It can be saved by right clicking,
+<p>Resulting image below. It can be saved by right clicking,
     then selecting "Save As". If old image displays below, hold down "ctrl" and refresh the page. Or clear cache
     and retry.</p>
         <hr class="solid">
