--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,9 @@
 
         <!-- Navigation Buttons -->
         <div style="margin: 40px; text-align: center">
-          <a class="btn btn-dark float-center" href="{{url_for('text_watermark')}}" style="margin-right: 20px">Text Watermark</a>
+          <a class="btn btn-dark float-center" href="{{url_for('text_watermark')}}">Text Watermark</a>
+        </div>
+                <div style="margin: 40px; text-align: center">
           <a class="btn btn-dark float-center" href="{{url_for('image_watermark')}}">Image Watermark</a>
         </div>
       </div>
